Astro3.0アップデート

--- a/src/components/catch/TopCatch.astro
+++ b/src/components/catch/TopCatch.astro
@@ -1,5 +1,5 @@
 ---
-import { Image } from "@astrojs/image/components";
+import { Image } from "astro:assets";
 import TopCatchImg1 from "~/img/top/top_back_01.png";
 import TopCatchImg2 from "~/img/top/top_back_02.png";
 import TopCatchImg3 from "~/img/top/top_back_03.png";
