--- a/src/components/common/ContentBanner.astro
+++ b/src/components/common/ContentBanner.astro
@@ -1,5 +1,5 @@
 ---
-import { Image } from "@astrojs/image/components";
+import { Image } from "astro:assets";
 import BannerKajijuku from "~/img/banner_kajijuku.png";
 import BannerSaisei from "~/img/banner_kominka_saisei.png";
 import BannerAkiya from "~/img/banner_akiya.png";
