--- a/src/components/global/Footer.astro
+++ b/src/components/global/Footer.astro
@@ -1,6 +1,6 @@
 ---
 import SNSList from "~/components/global/SNSList.astro";
-import { Image } from "@astrojs/image/components";
+import { Image } from "astro:assets";
 import FooterLogo from "~/img/footer_logo.png";
 import classnames from "classnames";
 const { class: className } = Astro.props;
