--- a/src/components/global/Navi.astro
+++ b/src/components/global/Navi.astro
@@ -1,5 +1,5 @@
 ---
-import { Image } from "@astrojs/image/components";
+import { Image } from "astro:assets";
 // import { Link } from "@astrojs/router";
 import Logo from "~/img/logo.png";
 import { SITE_TITLE } from "../../consts";
