--- a/src/components/global/SNSList.astro
+++ b/src/components/global/SNSList.astro
@@ -1,5 +1,5 @@
 ---
-import { Image } from "@astrojs/image/components";
+import { Image } from "astro:assets";
 import Facebook from "~/img/sns_facebook.png";
 import Instagram from "~/img/sns_instagram.png";
 import Line from "~/img/sns_line.png";
