--- a/src/components/home/TopNavi.astro
+++ b/src/components/home/TopNavi.astro
@@ -1,5 +1,5 @@
 ---
-import { Image } from "@astrojs/image/components";
+import { Image } from "astro:assets";
 import { PAGES } from "~/consts";
 import NavReform from "~/img/top/nav_reform.jpg";
 import NavLearn from "~/img/top/nav_learn.jpg";
