--- a/src/components/post/ColumnList.astro
+++ b/src/components/post/ColumnList.astro
@@ -1,6 +1,6 @@
 ---
 import useWPApi from "~/hooks/useWPApi";
-import { Image } from "@astrojs/image/components";
+import { Image } from "astro:assets";
 import dayjs from "dayjs";
 import ja from "dayjs/locale/ja";
 dayjs.locale(ja);
