--- a/src/components/post/EventList.astro
+++ b/src/components/post/EventList.astro
@@ -1,6 +1,6 @@
 ---
 import useWPApi, { WP_REST_API_Event } from "~/hooks/useWPApi";
-import { Image } from "@astrojs/image/components";
+import { Image } from "astro:assets";
 import dayjs from "dayjs";
 import ja from "dayjs/locale/ja";
 import customParseFormat from "dayjs/plugin/customParseFormat";
