--- a/src/components/post/ReformCaseList.astro
+++ b/src/components/post/ReformCaseList.astro
@@ -1,5 +1,5 @@
 ---
-import { Image } from "@astrojs/image/components";
+import { Image } from "astro:assets";
 import useWPApi, { WP_REST_API_Post_With_FeatureImage } from "~/hooks/useWPApi";
 import dayjs from "dayjs";
 import ja from "dayjs/locale/ja";
