--- a/src/components/reform/detail/ReformFlow.astro
+++ b/src/components/reform/detail/ReformFlow.astro
@@ -1,6 +1,6 @@
 ---
 import UserIcon from "./UserIcon.astro";
-import { Image } from "@astrojs/image/components";
+import { Image } from "astro:assets";
 import useWPApi from "~/hooks/useWPApi";
 import type { ReformFlow } from "~/types/customFields";
 
