--- a/src/components/reform/detail/UserIcon.astro
+++ b/src/components/reform/detail/UserIcon.astro
@@ -1,5 +1,5 @@
 ---
-import { Image } from "@astrojs/image/components";
+import { Image } from "astro:assets";
 import classNames from "classnames";
 export type Props = {
   src: string;
