--- a/src/pages/reproduction.astro
+++ b/src/pages/reproduction.astro
@@ -7,7 +7,7 @@ import PageCopy from "~/components/common/PageCopy.astro";
 import BreadCrumb from "~/components/common/BreadCrumb.astro";
 import ContentDetails from "~/components/reproduction/ContentDetails.astro";
 import InquiryMore from "~/components/common/InquiryMore.astro";
-import { Image } from "@astrojs/image/components";
+import { Image } from "astro:assets";
 import BannerKominkaSaisei from "~/img/banner_kominka_saisei.png";
 ---
 
