--- a/src/pages/staff.astro
+++ b/src/pages/staff.astro
@@ -1,6 +1,6 @@
 ---
 import useWPApi, { WP_REST_API_Staff } from "~/hooks/useWPApi";
-import { Image } from "@astrojs/image/components";
+import { Image } from "astro:assets";
 
 import PageCatch from "~/components/catch/PageCatch.astro";
 import { PAGES } from "~/consts";
