--- a/src/components/common/AboutModelHouse.astro
+++ b/src/components/common/AboutModelHouse.astro
@@ -1,5 +1,5 @@
 ---
-import { Image } from "@astrojs/image/components";
+import { Image } from "astro:assets";
 import ModelImage from "~/img/model_image.png";
 ---
 
