--- a/src/pages/learn.astro
+++ b/src/pages/learn.astro
@@ -4,7 +4,7 @@ import { PAGES } from "~/consts";
 import PageContent from "~/layouts/PageContent.astro";
 const { className } = PAGES.LEARN;
 import YoutubeImg from "~/img/learn/youtube.jpg";
-import { Image } from "@astrojs/image/components";
+import { Image } from "astro:assets";
 import BreadCrumb from "~/components/common/BreadCrumb.astro";
 import PageCopy from "~/components/common/PageCopy.astro";
 import EventList from "~/components/post/EventList.astro";
@@ -66,7 +66,7 @@ import SNSList from "~/components/global/SNSList.astro";
   <section class="learn_sns">
     <h3 class="learn_sns_title">その他のSNS</h3>
     <p class="learn_sns_copy">
-      講座情報やコラムの更新情報をいち早くお届けいたします。<br class="sp">
+      講座情報やコラムの更新情報をいち早くお届けいたします。<br class="sp" />
       是非フォローくださいね。
     </p>
     <SNSList />
