--- a/src/pages/learn.astro
+++ b/src/pages/learn.astro
@@ -46,14 +46,19 @@ import SNSList from "~/components/global/SNSList.astro";
       <p class="video_copy">
         イエノコトyoutubeチャンネルでは、プチ片付け術や暮らし術、スタッフの暮らしの様子を配信しています。是非チェックしてみてくださいね。
       </p>
-      <Image
-        src={YoutubeImg}
-        alt="youtube"
-        width={704}
-        height={394}
-        format="webp"
-        loading="lazy"
-      />
+      <a
+        href="https://youtu.be/1SdV2XdvM3c?si=dMLiRoeZScD7Q3I_"
+        target="_blank"
+      >
+        <Image
+          src={YoutubeImg}
+          alt="youtube"
+          width={704}
+          height={394}
+          format="webp"
+          loading="lazy"
+        />
+      </a>
     </div>
   </section>
   <section class="learn_column">
