--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,17 +15,12 @@ const { className } = PAGES.HOME;
 <PageContent class={className}>
   <TopCatch />
   <p class="main_copy">
-    九月二十九日は中秋の名月です。 <br />
-
-    月の読み方はたくさんあり <br />
-
-    日本語の豊かさを感じます。 <br />
-
-    「月々に月見る月は多けれど　月見る月はこの月の月」
-    <!-- イエノコトは太宰府市通古賀にある工務店。 <br />
-    いくら素敵な家を建てても、<br />
-    暮らしが整っていなくて、毎日イライラ<br />
-    していたらなんだか幸せじゃない。 -->
+    厳しい夏の日差しも <br />
+    いつのまにか終わり <br />
+    朝・夕に秋の風を感じながら <br />
+    また　ひとつ　年を重ねる　神無月 <br />
+    日本語のもつ　言葉の　優しさや　美しさに <br />
+    心惹かれる季節 <br />
     <strong>「家創りは、暮らし創り」</strong>
     そんな想いを持つ女性が集まって生まれた<br />イエノコトだからできるコト。
   </p>
