--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,12 +15,12 @@ const { className } = PAGES.HOME;
 <PageContent class={className}>
   <TopCatch />
   <p class="main_copy">
-    厳しい夏の日差しも <br />
-    いつのまにか終わり <br />
-    朝・夕に秋の風を感じながら <br />
-    また　ひとつ　年を重ねる　神無月 <br />
-    日本語のもつ　言葉の　優しさや　美しさに <br />
-    心惹かれる季節 <br />
+    １１月は霜月<br />
+    朝夕の風に冷さを感じる季節<br />
+    幼子が着物を着て得意そうな笑顔で<br />
+    手を引かれて歩いている<br />
+    それは遠い昔の我が子と重なり<br />
+    思わず顔がほころびます<br />
     <strong>「家創りは、暮らし創り」</strong>
     そんな想いを持つ女性が集まって生まれた<br />イエノコトだからできるコト。
   </p>
