TOPのコピー変更

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,12 +15,14 @@ const { className } = PAGES.HOME;
 <PageContent class={className}>
   <TopCatch />
   <p class="main_copy">
-    １１月は霜月<br />
-    朝夕の風に冷さを感じる季節<br />
-    幼子が着物を着て得意そうな笑顔で<br />
-    手を引かれて歩いている<br />
-    それは遠い昔の我が子と重なり<br />
-    思わず顔がほころびます<br />
+    幼いころの12月は<br />
+    お手伝いが大変でしたが<br />
+    楽しみもたくさんありました<br />
+    大掃除で見つけたお金<br />
+    餅つきのあんこのつまみぐい<br />
+    そしてツリーにケーキ<br />
+    締めが紅白歌合戦<br />
+    <br />
     <strong>「家創りは、暮らし創り」</strong>
     そんな想いを持つ女性が集まって生まれた<br />イエノコトだからできるコト。
   </p>
