--- a/src/pages/reform/[id].astro
+++ b/src/pages/reform/[id].astro
@@ -1,7 +1,7 @@
 ---
 import useWPApi, {
-  WP_REST_API_ReformStory,
-  WP_REST_API_Staff,
+  type WP_REST_API_ReformStory,
+  type WP_REST_API_Staff,
 } from "~/hooks/useWPApi";
 import BreadCrumb from "~/components/common/BreadCrumb.astro";
 import DetailPageCatch from "~/components/reform/detail/DetailPageCatch.astro";
