--- a/src/components/reform/StoriesList.astro
+++ b/src/components/reform/StoriesList.astro
@@ -1,5 +1,5 @@
 ---
-import useWPApi, { WP_REST_API_ReformStory } from "~/hooks/useWPApi";
+import useWPApi, { type WP_REST_API_ReformStory } from "~/hooks/useWPApi";
 import { Image } from "astro:assets";
 import dayjs from "dayjs";
 import ja from "dayjs/locale/ja";
@@ -7,7 +7,7 @@ dayjs.locale(ja);
 const { fetchPosts } = useWPApi();
 const ReformPosts = await fetchPosts<WP_REST_API_ReformStory[]>(
   "reform_story",
-  { per_page: 3, order: "asc" },
+  { per_page: 4, order: "asc" },
   false
 );
 if (!ReformPosts) return;
