--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,13 +15,11 @@ const { className } = PAGES.HOME;
 <PageContent class={className}>
   <TopCatch />
   <p class="main_copy">
-    幼いころの12月は<br />
-    お手伝いが大変でしたが<br />
-    楽しみもたくさんありました<br />
-    大掃除で見つけたお金<br />
-    餅つきのあんこのつまみぐい<br />
-    そしてツリーにケーキ<br />
-    締めが紅白歌合戦<br />
+    ２０２4年　辰年<br />
+    明けましておめでとうございます。<br />
+    一度っきりの日々の始まりです。<br />
+    今年の想いは<br />
+    大空に悠々と舞いあがる龍のごとくありたい<br />
     <br />
     <strong>「家創りは、暮らし創り」</strong>
     そんな想いを持つ女性が集まって生まれた<br />イエノコトだからできるコト。
