--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,11 +15,9 @@ const { className } = PAGES.HOME;
 <PageContent class={className}>
   <TopCatch />
   <p class="main_copy">
-    ２０２4年　辰年<br />
-    明けましておめでとうございます。<br />
-    一度っきりの日々の始まりです。<br />
-    今年の想いは<br />
-    大空に悠々と舞いあがる龍のごとくありたい<br />
+    節分は年4回「立春」「立夏」「立秋」「立冬」の前日です。<br />
+    2月の節分から新しい1年を始める方もいます。<br />
+    そろそろ春の気配があちらこちらに・・・。<br />
     <br />
     <strong>「家創りは、暮らし創り」</strong>
     そんな想いを持つ女性が集まって生まれた<br />イエノコトだからできるコト。
