--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@ const { className } = PAGES.HOME;
 <PageContent class={className}>
   <TopCatch />
   <p class="main_copy">
-    節分は年4回「立春」「立夏」「立秋」「立冬」の前日です。<br />
+    節分は年4回<br />「立春」「立夏」「立秋」「立冬」<br />の前日です。<br />
     2月の節分から新しい1年を始める方もいます。<br />
     そろそろ春の気配があちらこちらに・・・。<br />
     <br />
