--- a/src/components/post/EventList.astro
+++ b/src/components/post/EventList.astro
@@ -1,5 +1,5 @@
 ---
-import useWPApi, { WP_REST_API_Event } from "~/hooks/useWPApi";
+import useWPApi, { type WP_REST_API_Event } from "~/hooks/useWPApi";
 import { Image } from "astro:assets";
 import dayjs from "dayjs";
 import ja from "dayjs/locale/ja";
