--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,9 +15,15 @@ const { className } = PAGES.HOME;
 <PageContent class={className}>
   <TopCatch />
   <p class="main_copy">
-    節分は年4回<br />「立春」「立夏」「立秋」「立冬」<br />の前日です。<br />
-    2月の節分から新しい1年を始める方もいます。<br />
-    そろそろ春の気配があちらこちらに・・・。<br />
+    3月弥生<br />
+    気がつけば季節は巡り<br />
+    寒い冬を乗り越えて<br />
+    生命の息吹を感じる<br />
+    爽やかな時間が始まりました<br />
+    <br />
+    この季節にしか出会えない<br />
+    自然の力を<br />
+    太陽とともに身体に浴びる<br />
     <br />
     <strong>「家創りは、暮らし創り」</strong>
     そんな想いを持つ女性が集まって生まれた<br />イエノコトだからできるコト。
