--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,15 +15,13 @@ const { className } = PAGES.HOME;
 <PageContent class={className}>
   <TopCatch />
   <p class="main_copy">
-    3月弥生<br />
-    気がつけば季節は巡り<br />
-    寒い冬を乗り越えて<br />
-    生命の息吹を感じる<br />
-    爽やかな時間が始まりました<br />
+    4月8日はお釈迦様の誕生日で<br />
+    お寺では花祭りが催されます<br />
     <br />
-    この季節にしか出会えない<br />
-    自然の力を<br />
-    太陽とともに身体に浴びる<br />
+    自然に囲まれたお寺の境内で<br />
+    甘茶をいただきながら<br />
+    深呼吸をしてみるのにも<br />
+    いい季節<br />
     <br />
     <strong>「家創りは、暮らし創り」</strong>
     そんな想いを持つ女性が集まって生まれた<br />イエノコトだからできるコト。
