TOPの言葉変更6月度

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,11 +21,11 @@ const { className } = PAGES.HOME;
 <PageContent class={className}>
   <TopCatch />
   <p class="main_copy">
-    五月は七十ニ候では立夏。<br />
-    いよいよ夏の入口<br />
-    昔よりひと月ほど早くなった衣替え<br />
-    部屋中に風を通して<br />
-    不要なものと「さようなら」をする季節<br />
+    六月は水無月、水にかかわる季節<br />
+    ほたる・かたつむり・菖蒲・紫陽花<br />
+    遠い昔、イモの葉っぱに水を集めて<br />
+    綺麗な水のビー玉を作った記憶が<br />
+    よみがえる<br />
     <br />
     <strong>「家創りは、暮らし創り」</strong>
     そんな想いを持つ女性が集まって生まれた<br />イエノコトだからできるコト。
