7月文言アップ

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,11 +21,12 @@ const { className } = PAGES.HOME;
 <PageContent class={className}>
   <TopCatch />
   <p class="main_copy">
-    六月は水無月、水にかかわる季節<br />
-    ほたる・かたつむり・菖蒲・紫陽花<br />
-    遠い昔、イモの葉っぱに水を集めて<br />
-    綺麗な水のビー玉を作った記憶が<br />
-    よみがえる<br />
+    七月は文月<br />
+    七月七日は七夕様<br />
+    天の川で織姫と彦星が<br />
+    一年に一度だけ会うことが出来る日<br />
+    夏の夜空を眺めながらたくさんの<br />
+    星の物語を聴いた幼い頃のあの日<br />
     <br />
     <strong>「家創りは、暮らし創り」</strong>
     そんな想いを持つ女性が集まって生まれた<br />イエノコトだからできるコト。
