8月に文言変更

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,12 +21,13 @@ const { className } = PAGES.HOME;
 <PageContent class={className}>
   <TopCatch />
   <p class="main_copy">
-    七月は文月<br />
-    七月七日は七夕様<br />
-    天の川で織姫と彦星が<br />
-    一年に一度だけ会うことが出来る日<br />
-    夏の夜空を眺めながらたくさんの<br />
-    星の物語を聴いた幼い頃のあの日<br />
+    幼い頃の八月に思いを馳せる<br />
+    今日この頃<br />
+    ラジオ体操から始まる夏休み<br />
+    宿題もしないで水遊びや野山で<br />
+    遊んでいたあの頃の思い出は<br />
+    猛暑の思い出に変わっていく<br />
+
     <br />
     <strong>「家創りは、暮らし創り」</strong>
     そんな想いを持つ女性が集まって生まれた<br />イエノコトだからできるコト。
