--- a/src/components/common/LoopSection.astro
+++ b/src/components/common/LoopSection.astro
@@ -59,8 +59,8 @@ const { contents, class: className } = Astro.props;
   .content_text {
     line-height: 2;
     :global(a) {
-      opacity: 0.72;
-      border-bottom: solid 1px rgba(108, 108, 96, 0.72);
+      // opacity: 0.72;
+      // border-bottom: solid 1px rgba(108, 108, 96, 0.72);
     }
   }
   @media screen and (max-width: $mobileBreakPoint) {
