--- a/src/components/learn/AboutLecture.astro
+++ b/src/components/learn/AboutLecture.astro
@@ -3,6 +3,7 @@ import LoopSection from "../common/LoopSection.astro";
 import LearnImageKouza from "~/img/learn/learn_kouza.jpg";
 import LearnImageJuku from "~/img/learn/learn_juku.jpg";
 import LearnImageShukatsu from "~/img/learn/learn_shukatsu.jpg";
+import LearnImageHaken from "~/img/learn/learn_haken.jpg";
 const contents = [
   {
     title: "片付け講座",
@@ -39,6 +40,20 @@ const contents = [
         その時期は、人生再青春時代。自分らしく人生の最終章を楽しく過ごすため、
         <br />
         エンディングノートワークショップや、実家じまいのコト、生前整理のコトなどの講座を行っています。
+      `,
+  },
+  {
+    title: "講師派遣・法人研修",
+    image: LearnImageHaken,
+    text: `
+      イエノコトでは、家事セラピストによるお手伝い・片付け・終活講座の講師派遣を行っています。
+      <br />
+      また、暮らしをサービスとしている会社様向けに、社内研修として家事セラピスト育成のご希望も承っております。
+      <br />
+      詳細・料金等、お気軽にお問い合わせください。
+      <br />
+      <br />
+      <a href="/siryo">⇒お問い合わせはこちら</a>
       `,
   },
 ];
