--- a/src/components/post/ReformCaseList.astro
+++ b/src/components/post/ReformCaseList.astro
@@ -1,6 +1,8 @@
 ---
 import { Image } from "astro:assets";
-import useWPApi, { type WP_REST_API_Post_With_FeatureImage } from "~/hooks/useWPApi";
+import useWPApi, {
+  type WP_REST_API_Post_With_FeatureImage,
+} from "~/hooks/useWPApi";
 import dayjs from "dayjs";
 import ja from "dayjs/locale/ja";
 dayjs.locale(ja);
@@ -11,29 +13,44 @@ const CasePosts = await fetchPosts<WP_REST_API_Post_With_FeatureImage[]>(
   { per_page: 5, include: ids.join(",") },
   true
 );
+const ReformStoryPosts = await fetchPosts<WP_REST_API_Post_With_FeatureImage[]>(
+  "reform_story",
+  { per_page: 100, offset: 3 },
+  true
+);
 if (!CasePosts) return;
+if (!ReformStoryPosts) return;
 ---
 
-<section class="reform_list swiper">
+{
+  [ReformStoryPosts, CasePosts].map((Posts, i) => (
+  <section class={`reform_list swiper-${i}`}>
   <ul class="swiper-wrapper">
     {
-      CasePosts.map((post) => (
+      Posts.map((post) => (
         <li class="swiper-slide">
           <a href={post.link}>
+            {post["wp:featuredmedia"] && 
             <Image
-              src={post["wp:featuredmedia"][0].media_details["sizes"].past_case_thumbnail.source_url}
+              src={
+                post["wp:featuredmedia"][0].media_details["sizes"]
+                  .past_case_thumbnail.source_url
+              }
               width={234}
               height={227}
               format="webp"
               loading={"lazy"}
               alt={post.title.rendered}
-            />
+            />}
           </a>
         </li>
       ))
     }
   </ul>
 </section>
+
+  ))
+}
 <link
   rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
@@ -45,12 +62,17 @@ if (!CasePosts) return;
 <script is:inline>
   const breakPoint = 768;
   if (window.innerWidth <= breakPoint) {
-    swiper = new Swiper(".swiper", {
+    swiper1 = new Swiper(".swiper-1", {
+      slidesPerView: 4.4,
+      loop: true,
+    });
+    swiper2 = new Swiper(".swiper-2", {
       slidesPerView: 4.4,
       loop: true,
     });
   } else {
-    swiper = undefined;
+    swiper1 = undefined;
+    swiper2 = undefined;
   }
 </script>
 <style lang="scss">
@@ -58,6 +80,9 @@ if (!CasePosts) return;
     max-width: 1383px;
     margin-left: auto;
     margin-right: auto;
+    + .reform_list {
+      margin-top: 119px;
+    }
   }
   ul {
     margin: 0 auto;
@@ -78,6 +103,9 @@ if (!CasePosts) return;
     .reform_list {
       &.swiper {
         // width: vw($mobileDesignWidth - 37 * 2);
+      }
+      + .reform_list {
+      margin-top: vw(80px);// - TODO 要確認
       }
     }
     ul {
