--- a/src/pages/learn.astro
+++ b/src/pages/learn.astro
@@ -17,9 +17,7 @@ import SNSList from "~/components/global/SNSList.astro";
 <PageContent class={className}>
   <PageCatch page={"LEARN"} />
   <BreadCrumb page={"LEARN"} />
-  <PageCopy
-    title="いくら家を直しても、その後の暮らしが整っていなければ、幸せじゃない"
-  >
+  <PageCopy title="暮らし方を学べば、暮らしがもっと豊かになる">
     イエノコトは、「捨てる！技術」の辰巳渚の片付けの考えを学んだ、<br />
     暮らしの専門家である「家事セラピスト」が在中しています。<br />
     片付け＝モノと向き合うことを通して、<br />
