TOPコピー9月変更

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,12 +21,17 @@ const { className } = PAGES.HOME;
 <PageContent class={className}>
   <TopCatch />
   <p class="main_copy">
-    幼い頃の八月に思いを馳せる<br />
-    今日この頃<br />
-    ラジオ体操から始まる夏休み<br />
-    宿題もしないで水遊びや野山で<br />
-    遊んでいたあの頃の思い出は<br />
-    猛暑の思い出に変わっていく<br />
+    九月は長月<br />
+    月を眺める季節<br />
+    中秋の名月は十七日<br />
+    <br />
+    月々に月見る月は多けれど<br />
+    月見る月はこの月の月<br />
+    <br />
+    月見団子を作って<br />
+    ススキを飾って<br />
+    風流な時間を楽しむ<br />
+    <br />
 
     <br />
     <strong>「家創りは、暮らし創り」</strong>
