11月サイトアップデート

--- a/src/components/home/TopNavi.astro
+++ b/src/components/home/TopNavi.astro
@@ -32,7 +32,7 @@ const navContents: NavContent[] = [
     subtitle: "中古物件探しからリノベまで<br>ワンストップで対応",
     description:
       "中古住宅物件探しから住宅ローン、リフォームまで、暮らしの専門家がセットで行います。",
-    link: PAGES.REFORM.slug,
+    link: "https://ienokotorenovation.hp.peraichi.com",
   },
   {
     image: NavLearn,
