中古リノベリンク修正

--- a/src/components/global/Navi.astro
+++ b/src/components/global/Navi.astro
@@ -37,7 +37,9 @@ const isHome = Astro.url.pathname === "/";
     </a>
     <ul class="main_navi">
       <li><a href={PAGES.REFORM.slug}>リフォーム</a></li>
-      <li><a href={PAGES.LEARN.slug}>中古リノベ</a></li>
+      <li>
+        <a href="https://ienokotorenovation.hp.peraichi.com">中古リノベ</a>
+      </li>
       <li><a href={PAGES.LEARN.slug}>暮らしを学ぶ</a></li>
       <li><a href="/event">貸しスペース</a></li>
       <li><a href={PAGES.CONSULT.slug}>家のコト相談窓口</a></li>
