--- a/src/components/reform/StoriesList.astro
+++ b/src/components/reform/StoriesList.astro
@@ -106,6 +106,7 @@ if (!ReformPosts) return;
       font-size: vw(14px);
       padding: vw(5px) vw(15px);
       margin: vw(10px) 0 0 vw(24px);
+      display: none;
     }
     .story_spec {
       font-size: vw(14px);
