家事セラピストフッターリンク追加

--- a/src/components/global/Footer.astro
+++ b/src/components/global/Footer.astro
@@ -36,7 +36,11 @@ import { PAGES } from "../../consts";
       </ul>
       <ul class="footer-menu">
         <li class="pc"><a href={PAGES.CONSULT.slug}>暮らしの相談</a></li>
-        <li class="pc"><a href="#">家事セラピスト養成講座</a></li>
+        <li class="pc">
+          <a target="_blank" href="https://kajitherapist.hp.peraichi.com/kaji"
+            >家事セラピスト養成講座</a
+          >
+        </li>
         <li class="pc"><a href={PAGES.STAFF.slug}>スタッフ紹介</a></li>
       </ul>
       <ul class="footer-menu">
