--- a/src/components/home/TopNavi.astro
+++ b/src/components/home/TopNavi.astro
@@ -47,7 +47,7 @@ const navContents: NavContent[] = [
     title: "貸しスペース",
     subtitle: "講座カレンダー<br>貸しスペースを借りたい",
     description:
-      "モデルハウスは貸しスペースとして利用できます。アロマなどの講座が開催されていますので、是非チェックしてみてください。",
+      "モデルハウスは貸しスペースとして利用できます。<br>各講座カレンダーとお申込み実際にスペースを借りたい方はこちらから",
     link: "/event",
   },
   {
